--- a/Makefile.android
+++ b/Makefile.android
@@ -1,7 +1,8 @@
-PRG=Gwion
+PRG=Gwion_tablet
 LDFLAGS = -lsoundpipe
 LDFLAGS += -g -lm -pthread -lasound -lsndfile -fno-strict-aliasing
-LDFLAGS += -std=c99 -O3 -mfpmath=sse -mtune=core2 -freg-struct-return -ldl -rdynamic -lrt -lportaudio
+LDFLAGS += -std=c99 -O3 -mfpmath=sse -mtune=core2 -freg-struct-return -pipe \
+  -levdev -ldl -rdynamic -lrt -lcgraph -lgvc -lportaudio
 CFLAGS+=-Iinclude -I/usr/include/libevdev-1.0
 #CC = musl-gcc -I/opt/musl/include
 CC = cc
