--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ before_install:
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
+  - sudo apt-get install valgrind
 script:
+  - make
   - sh util/test.sh
