--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-get install valgrind
 script:
   - DIR=$PWD
-  - git clone https://github.com/PaulBatchelor/Soundpipe.git
+  - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
   - cd Soundpipe; sudo make install
   - cd $DIR
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
