--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: bash
 before_install:
-  - sudo apt-get install libsndfile1 libsndfile1-dev bison
+  - sudo apt-get install libsndfile1 libsndfile1-dev
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
   - sudo apt-get install valgrind
 script:
   - DIR=$PWD
+  - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
+  - tar -xzf bison-3.0.4.tar.gz
+  - cd bison-3.0.4
+  - ./configure
+  - make
+  - sudo make install
+  - cd $DIR
   - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
   - cd Soundpipe; sudo make install
   - cd $DIR
