--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: bash
 before_install:
-  - sudo apt-get install libsndfile1 libsndfile1-dev
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
   - sudo apt-get install valgrind
+  - sudo sudo apt-get install gcc-6
+  - sudo update-alternatives --config gcc
+  - sudo apt-get install libsndfile1 libsndfile1-dev
 script:
   - DIR=$PWD
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
