--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,13 @@ before_install:
   - sudo apt-get install libsndfile1 libsndfile1-dev
 script:
   - DIR=$PWD
+  - wget http://ftp.gnu.org/gnu/gcc/gcc-6.3.0/gcc-6.3.0.tar.gz
+  - tar -xzf gcc-6.3.0.tar.gz
+  - cd gcc-6.3.0
+  - ./configure
+  - make
+  - make install
+  - cd $DIR
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
   - tar -xzf bison-3.0.4.tar.gz
   - cd bison-3.0.4
