--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
 language: bash
 before_install:
-#  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test --yes
   - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
   - sudo apt-get install valgrind
-#  - sudo sudo apt-get install gcc-6
   - sudo apt-get install libsndfile1 libsndfile1-dev
+  - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
+  - chmod -R a+rw /usr/lib/Gwion
 script:
   - DIR=$PWD
-#  - wget http://ftp.gnu.org/gnu/gcc/gcc-6.3.0/gcc-6.3.0.tar.gz
-#  - tar -xzf gcc-6.3.0.tar.gz
-#  - cd gcc-6.3.0
-#  - ./configure
-#  - make
-#  - make install
-#  - cd $DIR
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
   - tar -xzf bison-3.0.4.tar.gz
   - cd bison-3.0.4
