--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
   - sudo apt-get install libsndfile1 libsndfile1-dev
   - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
   - sudo chmod -R a+rw /usr/lib/Gwion
+compiler:
+  - clang
+  - gcc
 script:
   - DIR=$PWD
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
