--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,9 @@ script:
   - sudo make install
   - cd $DIR
   - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
-  - cd Soundpipe; sudo make install
+  - cd Soundpipe; 
+  - make
+  - sudo make install
   - cd $DIR
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
