--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ compiler:
   - clang
   - gcc
 before_install:
-  - sudo add-apt-repository ppa:duggan/bats --yes
+#  - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
-  - sudo apt-get install -qq bats
+#  - sudo apt-get install -qq bats
   - sudo apt-get install valgrind
   - sudo apt-get install libsndfile1 libsndfile1-dev
   - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
@@ -24,6 +24,9 @@ script:
   - make
   - sudo make install
   - cd $DIR
+  - git clone https://github.com/sstephenson/bats.git
+  - cd bats
+  - sudo sh install.sh
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
   - make
