--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - cd $DIR
   - git clone https://github.com/sstephenson/bats.git
   - cd bats
-  - sudo sh install.sh
+  - sudo sh install.sh /usr/local
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
   - make
