--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ before_install:
 #  - sudo apt-get install -qq bats
   - sudo apt-get install valgrind
   - sudo apt-get install libsndfile1 libsndfile1-dev
+  - git clone https://github.com/sstephenson/bats.git
+  - oushd bats && sudo sh install.sh /usr/local && popd
   - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
   - sudo chmod -R a+rw /usr/lib/Gwion
+  
 script:
   - DIR=$PWD
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
@@ -24,9 +27,6 @@ script:
   - make
   - sudo make install
   - cd $DIR
-  - git clone https://github.com/sstephenson/bats.git
-  - cd bats
-  - sudo sh install.sh /usr/local
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
   - make
