--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install valgrind
   - sudo apt-get install libsndfile1 libsndfile1-dev
   - git clone https://github.com/sstephenson/bats.git
-  - pushd bats && sudo sh install.sh /usr/local && popd
+  - pushd bats && (sudo sh "install.sh /usr/local") && popd
   - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
   - sudo chmod -R a+rw /usr/lib/Gwion
   
