--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: c
+
+
 compiler:
   - clang
   - gcc
+
 before_install:
 #  - sudo add-apt-repository ppa:duggan/bats --yes
   - sudo apt-get update -qq
@@ -9,10 +12,14 @@ before_install:
   - sudo apt-get install valgrind
   - sudo apt-get install libsndfile1 libsndfile1-dev
   - git clone https://github.com/sstephenson/bats.git
-  - pushd bats && (sudo sh "install.sh /usr/local") && popd
+  - pushd bats && sudo ./install.sh /usr/local && popd
   - sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}
   - sudo chmod -R a+rw /usr/lib/Gwion
   
+env:
+   matrix:
+    - GW_FLOAT_TYPE=float
+    - GW_FLOAT_TYPE=double
 script:
   - DIR=$PWD
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
@@ -24,10 +31,12 @@ script:
   - cd $DIR
   - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
   - cd Soundpipe; 
+  - if [ "$GW_FLOAT_TYPE" = "double" ]; then sed -i 's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
   - make
   - sudo make install
   - cd $DIR
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
+  - if [ "$GW_FLOAT_TYPE" = "float" ]; then sed -i "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
   - make
   - sh util/test.sh
