--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,10 @@ script:
   - make
   - sudo make install
   - cd $DIR
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_DOC_DIR="./doc"; fi
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_API_DIR="./api"; fi
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_TOK_DIR="./tok"; fi
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_TAG_DIR="./tag"; fi
   - sed -i "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
   - sed -i "s/ALSA_D/#ALSA_D/" config.def.mk
   - if [ "$GW_FLOAT_TYPE" = "float" ]; then sed -i "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
