--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,13 @@ before_install:
   - git clone https://github.com/sstephenson/bats.git
   - pushd bats && sudo ./install.sh /usr/local && popd
   - if [ $TRAVIS_OS_NAME != "osx" ]; then sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}; sudo chmod -R a+rw /usr/lib/Gwion; fi 
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then export SED_FLAG='' ; fi
+    #- if [ $TRAVIS_OS_NAME = "osx" ]; then export SED_FLAG='' ; fi
+
 env:
    matrix:
     - GW_FLOAT_TYPE=float
     - GW_FLOAT_TYPE=double
+
 script:
   - DIR=$PWD
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
@@ -34,16 +36,20 @@ script:
   - cd $DIR
   - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
   - cd Soundpipe; 
-  - if [ "$GW_FLOAT_TYPE" = "double" ]; then sed -i 's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
+  - if [ "$GW_FLOAT_TYPE" = "double" && $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' 's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
+  - if [ "$GW_FLOAT_TYPE" = "double" && $TRAVIS_OS_NAME != "osx" ]; then sed -i    's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
   - make
   - sudo make install
   - cd $DIR
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_DOC_DIR="./doc"; fi
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_API_DIR="./api"; fi
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_TOK_DIR="./tok"; fi
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then export GWION_TAG_DIR="./tag"; fi
-  - sed -i $SED_FLAG "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk
-  - sed -i $SED_FLAG "s/ALSA_D/#ALSA_D/" config.def.mk
-  - if [ "$GW_FLOAT_TYPE" = "float" ]; then sed -i $SED_FLAG "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_DOC_DIR="./doc"; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_API_DIR="./api"; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_TOK_DIR="./tok"; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_TAG_DIR="./tag"; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk; fi
+  - if [ $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk; fi
+  - if [ $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/ALSA_D/#ALSA_D/" config.def.mk; fi
+  - if [ $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/ALSA_D/#ALSA_D/" config.def.mk; fi
+  - if [ "$GW_FLOAT_TYPE" = "float"  && $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
+  - if [ "$GW_FLOAT_TYPE" = "float"  && $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
   - make
   - sh util/test.sh
