--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,13 @@ compiler:
   - gcc
 
 before_install:
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then brew install valgrind libsndfile; else sudo sudo apt-get install valgrind libsndfile1 libsndfile1-dev; fi
-
-#  - sudo apt-get update -qq
-#  - sudo apt-get install valgrind
-#  - sudo apt-get install libsndfile1 libsndfile1-dev
+#bats
   - git clone https://github.com/sstephenson/bats.git
   - pushd bats && sudo ./install.sh /usr/local && popd
-  - if [ $TRAVIS_OS_NAME != "osx" ]; then sudo mkdir -p /usr/lib/Gwion/{doc,api,plug,tags,tok}; sudo chmod -R a+rw /usr/lib/Gwion; fi 
-    #- if [ $TRAVIS_OS_NAME = "osx" ]; then export SED_FLAG='' ; fi
+  - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
+  - tar -xzf bison-3.0.4.tar.gz
+  - pushd bison-3.0.4 && ./configure && make sudo make install && popd
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then sh util/osx_prepare.sh; else sh linux_prepare.sh; fi
 
 env:
    matrix:
@@ -26,31 +24,5 @@ env:
     - GW_FLOAT_TYPE=double
 
 script:
-  - DIR=$PWD
-  - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
-  - tar -xzf bison-3.0.4.tar.gz
-  - cd bison-3.0.4
-  - ./configure
-  - make
-  - sudo make install
-  - cd $DIR
-  - git clone --branch=dev https://github.com/PaulBatchelor/Soundpipe.git
-  - cd Soundpipe; 
-  - if [ "$GW_FLOAT_TYPE" = "double" && $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' 's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
-  - if [ "$GW_FLOAT_TYPE" = "double" && $TRAVIS_OS_NAME != "osx" ]; then sed -i    's/#USE_DOUBLE/USE_DOUBLE/' config.def.mk; fi
-  - if [ "$GW_FLOAT_TYPE" = "double" && $TRAVIS_OS_NAME  = "osx" ]; then sed -i ''   's/-lrt//'                  Makefile;      fi
-  - make
-  - sudo make install
-  - cd $DIR
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_DOC_DIR="./doc"; fi
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_API_DIR="./api"; fi
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_TOK_DIR="./tok"; fi
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then export GWION_TAG_DIR="./tag"; fi
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk; fi
-  - if [ $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/CFLAGS+=-DD_FUNC=alsa_driver/CFLAGS+=-DD_FUNC=dummy_driver/" config.def.mk; fi
-  - if [ $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/ALSA_D/#ALSA_D/" config.def.mk; fi
-  - if [ $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/ALSA_D/#ALSA_D/" config.def.mk; fi
-  - if [ "$GW_FLOAT_TYPE" = "float"  && $TRAVIS_OS_NAME  = "osx" ]; then sed -i '' $SED_FLAG "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
-  - if [ "$GW_FLOAT_TYPE" = "float"  && $TRAVIS_OS_NAME != "osx" ]; then sed -i    $SED_FLAG "s/USE_DOUBLE/#USE_DOUBLE/" config.def.mk; fi
   - make
   - sh util/test.sh
