--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - pushd bats && sudo ./install.sh /usr/local && popd
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
   - tar -xzf bison-3.0.4.tar.gz
-  - pushd bison-3.0.4 && ./configure && make sudo make install && popd
+  - pushd bison-3.0.4 && ./configure && make && sudo make install && popd
   - if [ $TRAVIS_OS_NAME = "osx" ]; then sh util/osx_prepare.sh; else sh linux_prepare.sh; fi
 
 env:
