--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
   - tar -xzf bison-3.0.4.tar.gz
   - pushd bison-3.0.4 && ./configure && make && sudo make install && popd
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then sh util/osx_prepare.sh; else sh linux_prepare.sh; fi
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then sh util/osx_prepare.sh; else sh util/linux_prepare.sh; fi
 
 env:
    matrix:
