--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - tar -xzf bison-3.0.4.tar.gz
   - pushd bison-3.0.4 && ./configure && make && sudo make install && popd
   - git clone https://github.com/paulbatchelor/Soundpipe.git
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then sh util/osx_prepare.sh; else sh util/linux_prepare.sh; fi
+  - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
 
 env:
    matrix:
