--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# container-based infrastructure
+#sudo: false
+
 language: c
 
 os:
@@ -21,10 +24,13 @@ matrix:
 #    - libsndfile1-dev
 
 #before_script:
+#  - git clone https://github.com/sstephenson/bats.git
+#  - pushd bats && ./install.sh /bats && popd && export PATH=$PATH:bats
 #  - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
 #  - tar -xzf bison-3.0.4.tar.gz
-#  - pushd bison-3.0.4 && ./configure && make && sudo make install && popd
-#  - export PATH=$PATH:bison-3.0.4  
+#  - pushd bison-3.0.4 && ./configure && && popd && export PATH=$PATH:bison-3.0.4  
+#  - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
+#  - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
 
 before_install:
 #bats
@@ -38,8 +44,8 @@ before_install:
 
 env:
    matrix:
-    - GW_FLOAT_TYPE=float
-    - GW_FLOAT_TYPE=double
+    - GW_FLOAT_TYPE=float  GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
+    - GW_FLOAT_TYPE=double GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
 
 script:
   - make
