--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,11 @@ before_install:
   - pushd bison-3.0.4 && ./configure && make && sudo make install && popd
   - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
   - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
+  - mkdir -p "$GWION_DOC_DIR"
+  - mkdir -p "$GWION_API_DIR"
+  - mkdir -p "$GWION_TOK_DIR"
+  - mkdir -p "$GWION_TAG_DIR"
+  - mkdir -p "$GWION_PLUG_DIR"
 
 env:
    matrix:
