--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ before_script:
   - pushd bison-3.0.4 && ./configure && make && popd && export PATH=$PATH:bison-3.0.4  
   - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
   - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
+  - export CFLAGS+=Soundpipe/h
   - mkdir -p "$GWION_DOC_DIR"
   - mkdir -p "$GWION_API_DIR"
   - mkdir -p "$GWION_TOK_DIR"
