--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,6 @@ before_script:
 
 script:
 #  - cp Soundpipe/h/soundpipe.h include
-  - export LIBARY_PATH=$PWD
+  - export LIBARY_PATH=Soundpipe
   - make
   - sh util/test.sh
