--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ addons:
 
 env:
   matrix:
+    fast_finish: true
+    allow_failures:
+      -  os: osx
     - GW_FLOAT_TYPE=float  GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
     - GW_FLOAT_TYPE=double GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
 #  - osx
@@ -28,9 +31,6 @@ compiler:
   - gcc
 
 #matrix:
-#  fast_finish: true
-#  allow_failures:
-#  -  os: osx
 
 
 before_script:
