--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,6 @@ compiler:
 
 before_script:
   - git clone https://github.com/sstephenson/bats.git
-#  - pushd bats && ./install.sh ./bin && popd && 
   - export PATH=$PATH:bats/bin
   - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
   - tar -xzf bison-3.0.4.tar.gz
@@ -46,6 +45,7 @@ before_script:
   - export CFLAGS+=-ISoundpipe/h
   - export LIBARY_PATH=Soundpipe
   - export BISON=$PWD/bison-3.0.4/src/bison
+  - export M4=$PWD/bison-3.0.4/data/m4sugar/m4sugar.m4
   - mkdir -p "$GWION_DOC_DIR"
   - mkdir -p "$GWION_API_DIR"
   - mkdir -p "$GWION_TOK_DIR"
