--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,6 @@ before_script:
   - mkdir -p "$GWION_TOK_DIR"
   - mkdir -p "$GWION_TAG_DIR"
   - mkdir -p "$GWION_PLUG_DIR"
-  - git checkout "Travis/verify"; git rm -f "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git commit -m"..."; git push; git checkout "$TRAVIS_BRANCH"
 
 script:
   - if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/' ast/Makefile; fi
@@ -64,5 +63,11 @@ branches:
 
 
 after_success:
-  - git checkout Travis/verify; touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git commit -m "..."; git push; sh ./travis_check.sh; git checkout "$TRAVIS_BRANCH"
+  - git clone -b Travis/verify https://github.com/fennecdjay/Gwion
+  - cd Gwion
+  - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+  - git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+  - git commit -m "..."
+  - git push
+  - sh ./travis_check.sh
 
