--- a/.travis.yml
+++ b/.travis.yml
@@ -1,73 +1,62 @@
 dist: trusty
 language: c
-
-# container-based infrastructure
 sudo: false
-
-
 os:
-  - linux
-  - osx
-
+- linux
+- osx
 addons:
   apt:
     packages:
-      - valgrind
-      - libsndfile1
-      - libsndfile1-dev
-
+    - valgrind
+    - libsndfile1
+    - libsndfile1-dev
 env:
-    - GW_FLOAT_TYPE=float  GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
-    - GW_FLOAT_TYPE=double GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok" GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
-#  - osx
-
-
+- GW_FLOAT_TYPE=float  GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok"
+  GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
+- GW_FLOAT_TYPE=double GWION_DOC_DIR="./doc" GWION_API_DIR="./api" GWION_TOK_DIR="./tok"
+  GWION_TAG_DIR="./tag" GWION_PLUG_DIR="./plug"
 matrix:
   fast_finish: true
   allow_failures:
-    -  os: osx
-
+  - os: osx
 compiler:
-  - clang
-  - gcc
-
-#matrix:
-
-
+- clang
+- gcc
 before_script:
-  - git clone https://github.com/sstephenson/bats.git
-  - export PATH=$PATH:bats/bin
-  - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
-  - tar -xzf bison-3.0.4.tar.gz
-  - pushd bison-3.0.4 && ./configure \-\-prefix=$PWD/../bison && make install && popd && export PATH=bison-3.0.4/src:$PATH
-  - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
-  - export CFLAGS+=-ISoundpipe/h
-  - export LIBARY_PATH=Soundpipe
-  - export BISON=$PWD/bison-3.0.4/src/bison
-  - export PATH=$PWD/bin:$PATH
-  - mkdir -p "$GWION_DOC_DIR"
-  - mkdir -p "$GWION_API_DIR"
-  - mkdir -p "$GWION_TOK_DIR"
-  - mkdir -p "$GWION_TAG_DIR"
-  - mkdir -p "$GWION_PLUG_DIR"
-
+- git clone https://github.com/sstephenson/bats.git
+- export PATH=$PATH:bats/bin
+- wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
+- tar -xzf bison-3.0.4.tar.gz
+- pushd bison-3.0.4 && ./configure \-\-prefix=$PWD/../bison && make install && popd
+  && export PATH=bison-3.0.4/src:$PATH
+- git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
+- if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh;
+  fi
+- export CFLAGS+=-ISoundpipe/h
+- export LIBARY_PATH=Soundpipe
+- export BISON=$PWD/bison-3.0.4/src/bison
+- export PATH=$PWD/bin:$PATH
+- mkdir -p "$GWION_DOC_DIR"
+- mkdir -p "$GWION_API_DIR"
+- mkdir -p "$GWION_TOK_DIR"
+- mkdir -p "$GWION_TAG_DIR"
+- mkdir -p "$GWION_PLUG_DIR"
 script:
-  - if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/' ast/Makefile; fi
-  - make && sh util/test.sh
-
+- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/'
+  ast/Makefile; fi
+- make && sh util/test.sh
 branches:
-  - only:
-    - dev
-    - coverity_scan
-
-
+- only:
+  - dev
+  - coverity_scan
 after_success:
-  - git clone -b Travis/verify https://github.com/fennecdjay/Gwion
-  - cd Gwion
-  - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-  - git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-  - git commit -m "..."
-  - git push
-  - sh ./travis_check.sh
-
+- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
+- cd Gwion
+- touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+- git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+- git commit -m "..."
+- git push
+- sh ./travis_check.sh $(cat .travis_encrypt)
+before_install:
+  - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv
+  -in .travis_encrypt.enc -out .travis_encrypt -d
