--- a/.travis.yml
+++ b/.travis.yml
@@ -58,5 +58,4 @@ after_success:
 - git push
 - sh ./travis_check.sh $(cat .travis_encrypt)
 before_install:
-  - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv
-  -in .travis_encrypt.enc -out .travis_encrypt -d
+  - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv -in .travis_encrypt.enc -out .travis_encrypt -d
