--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,10 @@ before_script:
 - pushd bison-3.0.4 && ./configure \-\-prefix=$PWD/../bison && make install && popd
   && export PATH=bison-3.0.4/src:$PATH
 - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
-- if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh;
-  fi
+- if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
+  - git clone -b Travis/verify https://github.com/fennecdjay/Gwion
+  - pushd Gwion; git rm "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git commit -m "..."; git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify; popd
+
 - export CFLAGS+=-ISoundpipe/h
 - export LIBARY_PATH=Soundpipe
 - export BISON=$PWD/bison-3.0.4/src/bison
@@ -50,7 +52,6 @@ branches:
   - dev
   - coverity_scan
 after_success:
-- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
 - cd Gwion
 - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
 - git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
