--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script:
 - if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
 - git clone -b Travis/verify https://github.com/fennecdjay/Gwion
 - pushd Gwion; git rm "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git commit -m "..."; git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify; popd
+- rm -rf Gwion
 - export CFLAGS+=-ISoundpipe/h
 - export LIBARY_PATH=Soundpipe
 - export BISON=$PWD/bison-3.0.4/src/bison
@@ -49,6 +50,7 @@ branches:
   - dev
   - coverity_scan
 after_success:
+- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
 - cd Gwion
 - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
 - git pull
