--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 dist: trusty
 language: c
-#sudo: false
+sudo: false
 os:
 - linux
 - osx
@@ -27,12 +27,11 @@ before_script:
 - export PATH=$PATH:bats/bin
 - wget http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
 - tar -xzf bison-3.0.4.tar.gz
-- pushd bison-3.0.4 && ./configure \-\-prefix=$PWD/../bison && make install && popd && export PATH=bison-3.0.4/src:$PATH
+- pushd bison-3.0.4 && ./configure \-\-prefix=$PWD/../bison && make install && popd
+  && export PATH=bison-3.0.4/src:$PATH
 - git clone -b dev https://github.com/paulbatchelor/Soundpipe.git
-- if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh; fi
-- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
-- pushd Gwion; git rm "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"; git commit -m "..."; git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify; popd
-- rm -rf Gwion
+- if [ $TRAVIS_OS_NAME = "osx" ]; then bash util/osx_prepare.sh; else bash util/linux_prepare.sh;
+  fi
 - export CFLAGS+=-ISoundpipe/h
 - export LIBARY_PATH=Soundpipe
 - export BISON=$PWD/bison-3.0.4/src/bison
@@ -43,7 +42,8 @@ before_script:
 - mkdir -p "$GWION_TAG_DIR"
 - mkdir -p "$GWION_PLUG_DIR"
 script:
-- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/' ast/Makefile; fi
+- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/'
+  ast/Makefile; fi
 - make && sh util/test.sh
 branches:
 - only:
@@ -53,11 +53,9 @@ after_success:
 - git clone -b Travis/verify https://github.com/fennecdjay/Gwion
 - cd Gwion
 - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-- git pull
 - git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
 - git commit -m "..."
-- git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify || (sleep 1; git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify) 
+- git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify
 - sh ./travis_check.sh $(cat ../.travis_encrypt)
 before_install:
   - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv -in .travis_encrypt.enc -out .travis_encrypt -d
-
