--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,14 @@ after_success:
 - touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
 - git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
 - git commit -m "..."
-- git push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify
+- git --quiet push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify > /dev/null 2>&1
 - sh ./travis_check.sh $(cat ../.travis_encrypt)
 before_install:
   - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv -in .travis_encrypt.enc -out .travis_encrypt -d
+after_failure:
+- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
+- cd Gwion
+- rm -f "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+- git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
+- git commit -m "..."
+- git push --quiet https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify > /dev/null 2>&1
