--- a/.travis.yml
+++ b/.travis.yml
@@ -43,28 +43,12 @@ before_script:
 - mkdir -p "$GWION_TOK_DIR"
 - mkdir -p "$GWION_TAG_DIR"
 - mkdir -p "$GWION_PLUG_DIR"
+
 script:
-- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/'
-  ast/Makefile; fi
+- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/${YACC}/..\/bison-3.0.4\/src\/bison/' ast/Makefile; fi
+- if [ $TRAVIS_OS_NAME = "osx" ]; then sed -i '' 's/..\/Soundpipe\/module\/data/Soundpipe\/module\/data/' config.def.mk; else  sed -i 's/..\/Soundpipe\/module\/data/Soundpipe\/module\/data/' config.def.mk;fi
 - make && sh util/test.sh
+
 branches:
 - only:
   - dev
-  - coverity_scan
-after_success:
-- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
-- cd Gwion
-- touch "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-- git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-- git commit -m "..."
-- git --quiet push https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify > /dev/null 2>&1
-- sh ./travis_check.sh $(cat ../.travis_encrypt)
-before_install:
-  - openssl aes-256-cbc -K $encrypted_c04698045216_key -iv $encrypted_c04698045216_iv -in .travis_encrypt.enc -out .travis_encrypt -d
-after_failure:
-- git clone -b Travis/verify https://github.com/fennecdjay/Gwion
-- cd Gwion
-- rm -f "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-- git add "$TRAVIS_OS_NAME-$CC-$GW_FLOAT_TYPE"
-- git commit -m "..."
-- git push --quiet https://$(cat ../.travis_encrypt)@github.com/fennecdjay/gwion.git Travis/verify > /dev/null 2>&1
