--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 
 env:
   global:
-    - SOUNDPIPE_DATA_DIR=Soundpipe/modules/data
+    - SOUNDPIPE_DATA_DIR=$HOME/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
     - GWION_DOC_DIR="./doc"
     - GWION_API_DIR="./api"
