--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,13 @@ compiler:
 - clang
 - gcc
 
+before_install:
+  - pip install --user cpp-coveralls
+
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
   - export CFLAGS+=-ISoundpipe/h
+  - if [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && CFLAGS+=--coverage
   - export LIBARY_PATH=Soundpipe
   - export YACC=$PWD/bison-3.0.4/src/bison
   - bash util/travis_prepare.sh
@@ -54,3 +58,6 @@ script:
 branches:
   - only:
     - dev
+
+after_success:
+  - if [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
