--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
   - export CFLAGS+=-ISoundpipe/h
-  - if [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && CFLAGS+=--coverage
+  - [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && CFLAGS+=--coverage
   - export LIBARY_PATH=Soundpipe
   - export YACC=$PWD/bison-3.0.4/src/bison
   - bash util/travis_prepare.sh
@@ -60,4 +60,4 @@ branches:
     - dev
 
 after_success:
-  - if [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - [ $CC = gcc && $ GW_FLOAT_TYPE = float  && SP_BRANCH = dev ] && - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
