--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   global:
     - D_FUNC=dummy_driver
     - ALSA_D=0
-    - SOUNDPIPE_DATA_DIR=/home/travis/build/fennecdjay/Gwion/Soundpipe/modules/data
+    - SOUNDPIPE_DATA_DIR=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
     - GWION_DOC_DIR=./doc
     - GWION_API_DIR=./api
