Full travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: c
 sudo: false
 
 os:
-#  - linux
+  - linux
   - osx
 
 addons:
@@ -39,13 +39,12 @@ matrix:
 
 compiler:
 - clang
-#- gcc
+- gcc
 
 before_install:
   - pip install --user cpp-coveralls
 
 before_script:
-#  - export $TRAVIS_BUILD_DIR/Soundpipe/modules/data
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
   - export CFLAGS+=-ISoundpipe/h
   - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then CFALGS+=--coverage; fi; fi; fi
