--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ before_install:
 
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
-  - export CFLAGS+=-ISoundpipe/h
+  - export CFLAGS+=-I$TRAVIS_BUILD_DIR/Soundpipe/h
   - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then CFLAGS+=--coverage; fi; fi; fi
   - export LIBARY_PATH=Soundpipe
   - export YACC=$PWD/bison-3.0.4/src/bison
