--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,9 @@ before_install:
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
   - export CFLAGS+=-I$TRAVIS_BUILD_DIR/Soundpipe/h
-  - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then CFLAGS+=' --coverage'; LDFLAGS+='  -lgcov';fi; fi; fi
-  - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then LDFLAGS+='  -lgcov';fi; fi; fi
+  - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then export COVERAGE=1;fi; fi; fi
   - export LIBARY_PATH=Soundpipe
   - export YACC=$PWD/bison-3.0.4/src/bison
-  - echo $TRAVIS_BUILD_DIR
   - bash util/travis_prepare.sh
 
 script:
