--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ env:
     - MY_PATH=$PATH
   matrix:
     - GW_FLOAT_TYPE=float  SP_BRANCH=dev
-    - GW_FLOAT_TYPE=double SP_BRANCH=dev
+    - GW_FLOAT_TYPE=double USE_DOUBLE=1 SP_BRANCH=dev
     - GW_FLOAT_TYPE=float  SP_BRANCH=master SPA_D=0
-    - GW_FLOAT_TYPE=double SP_BRANCH=master SPA_D=0
+    - GW_FLOAT_TYPE=double USE_DOUBLE=1 SP_BRANCH=master SPA_D=0
 
 matrix:
   fast_finish: true
@@ -42,13 +42,12 @@ compiler:
 - gcc
 
 before_install:
-  - pip install --user cpp-coveralls
+  - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then pip install --user cpp-coveralls
 
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
   - export CFLAGS+=-I$TRAVIS_BUILD_DIR/Soundpipe/h
   - if [ $CC = 'gcc' ]; then if [ $GW_FLOAT_TYPE = 'float' ]; then if [ $SP_BRANCH = 'dev' ]; then export COVERAGE=1;fi; fi; fi
-  - export LIBARY_PATH=Soundpipe
   - export YACC=$PWD/bison-3.0.4/src/bison
   - bash util/travis_prepare.sh
 
